--- a/Source/Compiler/Resource/SRRT.ui
+++ b/Source/Compiler/Resource/SRRT.ui
@@ -484,8 +484,14 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
      <widget class="QPushButton" name="btnConvert">
       <property name="minimumSize">
        <size>
-        <width>150</width>
+        <width>254</width>
         <height>100</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>254</width>
+        <height>16777215</height>
        </size>
       </property>
       <property name="font">
@@ -555,7 +561,7 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
          <property name="font">
           <font>
            <family>Arial</family>
-           <pointsize>16</pointsize>
+           <pointsize>28</pointsize>
            <weight>75</weight>
            <italic>true</italic>
            <bold>true</bold>
@@ -596,7 +602,7 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
           </font>
          </property>
          <property name="text">
-          <string>Version : 1.00a</string>
+          <string>Version : 1.01a</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -619,7 +625,7 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
           </font>
          </property>
          <property name="text">
-          <string>Date: 26 June 2020</string>
+          <string>Date: 27 June 2020</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -931,7 +937,51 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
        <string>Input:</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="1">
+       <item row="1" column="1">
+        <widget class="QPushButton" name="btnInputClear">
+         <property name="minimumSize">
+          <size>
+           <width>150</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>-1</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Clear</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <spacer name="horizontalSpacer_5">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="1" column="2">
+        <spacer name="horizontalSpacer_6">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="0" colspan="3">
         <widget class="QTextEdit" name="teInput">
          <property name="font">
           <font>
@@ -947,9 +997,7 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Arial'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;1) Select your desired pilot's ATR.&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;2) Highlight and copy all ATR activity for your desired date range.&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;3) Click the 'Paste from Clipboard and Convert to Report' button.&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="acceptRichText">
