--- a/Source/Compiler/SkyShadows Rapid Reporting Tool/srrt.ui
+++ b/Source/Compiler/SkyShadows Rapid Reporting Tool/srrt.ui
@@ -767,7 +767,7 @@ color: rgb(64, 64, 64);
           </font>
          </property>
          <property name="text">
-          <string>Created CM SkyShadow</string>
+          <string>Created by CPT SkyShadow</string>
          </property>
         </widget>
        </item>
@@ -810,7 +810,7 @@ color: rgb(64, 64, 64);
           </font>
          </property>
          <property name="text">
-          <string>SkyShadow's Rapid Reporting Tool v1.04 Alpha</string>
+          <string>SkyShadow's Rapid Reporting Tool v1.07</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -843,7 +843,7 @@ color: rgb(64, 64, 64);
           </font>
          </property>
          <property name="text">
-          <string>Date: 14 September 2021</string>
+          <string>Date: 30 September 2021</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -885,7 +885,7 @@ color: rgb(64, 64, 64);
           </font>
          </property>
          <property name="text">
-          <string>Version : 1.05a</string>
+          <string>Version : 1.07</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
